hphp/test/slow/php7_backported/scalar-types/scalar_reserved4_class_alias.php.expectf

Fatal error: Fatal error: Cannot use 'string' as class name as it is reserved in %s/scalar_reserved4_class_alias.php on line 7
